--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,13 @@
 
 <!--    <uses-permission android:name="android.permission.VIBRATE" />-->
 
+<!--    for walk counter-->
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
+<!--    <uses-permission android:name="android.permission.LOCATION_HARDWARE.sensor.stepcounter"/>-->
+
+<!--    <uses-feature android:name="android.hardware.sensor.stepcounter" android:required="true"/>-->
+<!--    <uses-feature android:name="android.hardware.sensor.stepdetector" android:required="true"/>-->
+
 
     <application
         android:allowBackup="true"
