--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,9 @@
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
 
-<!--    <uses-permission android:name="android.permission.VIBRATE" />-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!--    <uses-permission android:name="android.permission.VIBRATE" />-->
 
 <!--    for walk counter-->
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
