--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.fitnessapp" >
+    package="com.example.fitnessapp">
 
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-    <!--    <uses-permission android:name="android.permission.VIBRATE" />-->
-
-<!--    for walk counter-->
-    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
-<!--    <uses-permission android:name="android.permission.LOCATION_HARDWARE.sensor.stepcounter"/>-->
-
-<!--    <uses-feature android:name="android.hardware.sensor.stepcounter" android:required="true"/>-->
-<!--    <uses-feature android:name="android.hardware.sensor.stepdetector" android:required="true"/>-->
-
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/fitness_app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/fitness_app"
         android:supportsRtl="true"
         android:theme="@style/Theme.FitnessApp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <receiver
             android:name=".fragment.navigation.myProfile.Notification"
-            android:enabled="true"/>
+            android:enabled="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
